1999-04-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-history.c (gnome_history_get_recently_used): Remove "rt"
	and use "r" in fopen call.
	(write_history): ditoo.
	* gnome-fileconvert.c (load_types_from): ditto
	* gnome-score.c (log_score): ditto
	(gnome_score_get_notable): ditto.
	* gnome-mime.c (mime_fill_from_file): Ditto.
	* gnome-triggers.c (gnome_triggers_readfile): ditto.

Sat Apr 24 14:04:31 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry.c: (gnome_desktop_entry_copy) copy the is_kde flag
	  as well

Fri Apr 23 01:18:57 1999  George Lebl  <jirka@5z.com>

	* gnome-config.c: minor doc fixes, and in make vector, don't
	  assume that the '\' has a character after it. This function
	  uses external data and shouldn't assume they are 100% correct

Tue Apr 20 21:03:24 1999  George Lebl  <jirka@5z.com>

	* gnome-util.c: (g_file_exists) fix warning by returning FALSE from
	  the assert

	* gnome-moz-remote.c: fix warning by returning 0 on the end of main

1999-04-16  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-triggersP.h: Remove external declaration as it is static.
	Bug found by Ian Main on OpenBSD.

1999-04-13  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-mime.c (mime_load): Fix memory leak, thanks again for
	Morten for his careful reading of the source code.   This was a
	side effect of the gnome.mime and user.mime additions. 

1999-04-12  Jonathan Blandford  <jrb@redhat.com>

	* gnome-util.c (g_file_exists): sanity check to make sure filename
	exists.

Sat Apr 10 20:56:25 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* gnome-triggers.c (gnome_triggers_readfile): 
	* gnome-fileconvert.c (load_types_from): Open file in TEXT mode.

Fri Apr 09 18:47:46 1999  George Lebl  <jirka@5z.com>

	* gnome-config.c: documentation fixes and minor cleanups

	* gnome-dentry.c: fix a problem with _save, as we have to push
	  an empty section in case our caller pushed a different section

1999-04-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>
